fix(develop): error in getting email templates in production